--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,22 @@
   font-size: 1.6rem;
 }
 
+@media (max-width: 1024px) {
+  :root {
+    font-size: 60%;
+  }
+}
+
+@media (max-width: 1024px) {
+  :root {
+    font-size: 58%;
+  }
+}
+
+ul {
+  list-style: none;
+}
+
 body {
   background-color: var(--color-body-background);
 }
@@ -27,4 +43,10 @@ a {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+img {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
