--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,22 @@
 :root {
-  --color-body-background: #f5f5f5;
+  --color-body-background: #dadfe8;
+  --color-eletic: #fcc719;
+  --color-dragon: #c29791;
+  --color-water: #76befe;
+  --color-fire: #ed8a8b;
+  --color-grass: #49d0b0;
+  --color-darkness: #ba68c8;
 
-  font-size: 62.5%; /** global font-size: 10px  */
+  --color-white: #ffffff;
+  --color-text: #121214;
+  --color-border-gray: #bebebe;
+  --color-background-button: #6b727a;
+
+  --color-background-button_hover: #fd8789;
+  --color-background-button_select: #fa6668;
+  --color-background-button_active: #c54446;
+
+  font-size: 62.5%; /** font-size: 10px  */
 }
 
 * {
@@ -9,8 +24,9 @@
   padding: 0;
   box-sizing: border-box;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   border: none;
+  outline: none;
 
   font-size: 1.6rem;
 }
