--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,6 @@
-.wrapper {
-  width: 100%;
-  min-height: 100vh;
-
-  display: flex;
-  justify-content: center;
-}
-
 .main_container {
   width: min(100%, 720px);
-  margin: 2rem 1rem;
+  margin: 1rem;
 
   display: flex;
   justify-content: space-between;
@@ -28,7 +20,7 @@
   border-radius: 1rem; /** 10px */
   overflow: hidden;
 
-  box-shadow: 5px 5px 10px -6px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 15px -10px rgba(0, 0, 0, 0.5);
   animation: PokemonShowTopToBottom 0.9s ease;
 }
 
@@ -42,16 +34,40 @@
   width: 100%;
   padding: 4rem;
 
-  background-color: #ffcc23;
+  background-color: transparent;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.card__header.eletric {
+  background-color: var(--color-eletic);
+}
+
+.card__header.water {
+  background-color: var(--color-water);
+}
+
+.card__header.fire {
+  background-color: var(--color-fire);
+}
+
+.card__header.grass {
+  background-color: var(--color-grass);
+}
+
+.card__header.dragon {
+  background-color: var(--color-dragon);
+}
+
+.card__header.darkness {
+  background-color: var(--color-darkness);
+}
+
 .card__details {
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem; /** 0.5 * 10 = 5px */
 
   display: flex;
   flex-direction: column;
@@ -67,12 +83,12 @@
 }
 
 .card__details h1 strong {
-  color: #fff;
+  color: var(--color-white);
   font-size: 2.4rem;
 }
 
 .card__details h1 span {
-  color: #fff;
+  color: var(--color-white);
 
   font-size: 1.6rem;
   font-weight: bold;
@@ -85,13 +101,13 @@
   padding: 0.7rem;
   margin: 0.5rem;
 
-  background-color: #fff;
-  border-radius: 30%;
+  background-color: var(--color-white);
+  border-radius: 48%;
 
-  text-transform: uppercase;
+  text-transform: capitalize;
 
-  font-weight: bold;
-  font-size: 1.3rem;
+  font-weight: 600;
+  font-size: 1.2rem;
   color: #121212;
 
   opacity: 0.8;
@@ -106,12 +122,12 @@
 
 /** Pokemon image */
 .image_wrapper {
-  margin-bottom: -8rem;
+  margin-bottom: -10rem;
 }
 
 .image_wrapper img {
-  width: 27rem;
-  height: 27rem;
+  width: 30rem;
+  height: 30rem;
 }
 
 /**
@@ -119,9 +135,9 @@
 */
 .card__content {
   width: 100%;
-  padding: 4rem;
+  padding: 3.5rem 4rem;
 
-  background-color: #fff;
+  background-color: var(--color-white);
 
   display: flex;
   justify-content: center;
@@ -129,7 +145,7 @@
 
 .card__content > div {
   flex: 1;
-  margin: 1.5rem 0 0 3rem;
+  margin: 1.5rem 0 0 2rem;
 }
 
 .card__content .status_container {
@@ -144,22 +160,24 @@
   font-size: 2rem;
   padding: 0.5rem 0;
 
-  margin-bottom: 0.5rem;
-  border-bottom: 1px solid #bebebe;
+  border-bottom: 1px solid var(--color-border-gray);
 }
 
 .card__content li {
-  color: #757575;
-  font-size: 1.7rem;
-  line-height: 1.7;
+  color: var(--color-text);
+  font-size: 1.6rem;
+  line-height: 1.8;
 
-  border-bottom: 1px solid #bebebe;
+  border-bottom: 1px solid var(--color-border-gray);
+}
+
+.card__content li:last-child {
+  border: none;
 }
 
 /**
  - Navigation
 */
-
 .navigation_bar {
   width: 25rem;
 }
@@ -174,28 +192,38 @@
   width: 100%;
   padding: 1.4rem;
 
-  background-color: #6b727a;
+  background-color: var(--color-background-button);
   border-radius: 3rem 0.5rem 0.5rem 3rem;
 
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 
+  box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.4);
   transition: background 0.6s ease, transform 0.2s ease-out;
 }
 
 .pokemon-select:hover {
-  background-color: #fa6668;
+  background-color: var(--color-background-button_hover);
   transform: scale(1.05);
 }
 
 .pokemon-select.checked {
-  background-color: #fa6668;
+  background-color: var(--color-background-button_select);
+}
+
+.pokemon-select.checked:hover {
+  cursor: not-allowed;
+}
+
+.pokemon-select.checked:active {
+  background-color: var(--color-background-button_active);
 }
 
 .navigation_list li span {
-  font-size: 1.7rem;
-  color: #fff;
+  color: var(--color-white);
+
+  font-size: 1.6rem;
   font-weight: 600;
 }
 
