--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,11 @@
 .main_container {
-  width: min(100%, 720px);
-  margin: 1rem;
+  width: min(100%, 750px);
+
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+
+  padding-left: 1rem;
+  padding-right: 1rem;
 
   display: flex;
   justify-content: space-between;
@@ -21,6 +26,7 @@
   overflow: hidden;
 
   box-shadow: 5px 5px 15px -10px rgba(0, 0, 0, 0.5);
+
   animation: PokemonShowTopToBottom 0.9s ease;
 }
 
@@ -96,6 +102,7 @@
 
 .pokemon-type {
   user-select: none;
+
   display: inline-block;
 
   padding: 0.7rem;
@@ -158,6 +165,7 @@
 
 .card__content h3 {
   font-size: 2rem;
+
   padding: 0.5rem 0;
 
   border-bottom: 1px solid var(--color-border-gray);
@@ -166,6 +174,7 @@
 .card__content li {
   color: var(--color-text);
   font-size: 1.6rem;
+
   line-height: 1.8;
 
   border-bottom: 1px solid var(--color-border-gray);
@@ -200,6 +209,7 @@
   align-items: center;
 
   box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.4);
+
   transition: background 0.6s ease, transform 0.2s ease-out;
 }
 
