--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,8 @@
   --color-background-button_select: #fa6668;
   --color-background-button_active: #c54446;
 
+  --background-overlay-url: url('../../public/assets/overlay.png');
+
   font-size: 62.5%; /** font-size: 10px  */
 }
 
@@ -75,6 +77,8 @@ img {
   -moz-user-select: none;
   -webkit-user-select: none;
   pointer-events: none;
+
+  object-fit: cover;
 }
 
 ul {
