--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -1,11 +1,23 @@
-@keyframes PokemonShowTopToBottom {
+@keyframes to_right {
   from {
     opacity: 0;
-    transform: translateY(-40%);
+    transform: translateX(-50%);
   }
 
   to {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
+  }
+}
+
+@keyframes to_left {
+  from {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
