--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,9 +37,9 @@
   border-radius: 1rem; /** 10px */
   overflow: hidden;
 
-  box-shadow: 5px 5px 15px -10px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
 
-  animation: PokemonShowTopToBottom 0.9s ease;
+  animation: to_right 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .card.visible {
@@ -60,7 +60,7 @@
 
   background: var(--background-overlay-url) no-repeat;
 
-  background-size: 90% 95%;
+  background-size: 80% 90%;
   background-position: center;
 }
 
@@ -206,10 +206,13 @@
 */
 .navigation_bar {
   width: 25rem;
+  min-height: 100%;
+
+  animation: to_left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .navigation_list li {
-  margin-bottom: 1.6rem;
+  margin-bottom: 1rem;
 }
 
 .pokemon-select {
@@ -225,7 +228,7 @@
   justify-content: space-evenly;
   align-items: center;
 
-  box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.5);
 
   transition: background 0.6s ease, transform 0.2s ease-out;
 }
@@ -241,6 +244,7 @@
 
 .pokemon-select.checked:hover {
   cursor: not-allowed;
+  transform: none;
 }
 
 .pokemon-select.checked:active {
@@ -255,8 +259,8 @@
 }
 
 .navigation_list li img {
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4rem;
 
   border-radius: 50%;
 }
